style.index.css
@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.topnav {
  overflow: hidden;
  background-color: #202124;
  color: #f0f0f0;
  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
  display: flex;
  justify-content: flex-end;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  font-family: 'Lexend Deca', sans-serif;
}

.topnav a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 10px 30px;
  text-decoration: none;
  font-size: 1.5rem;
  height: 100%;
  transition: transform 0.3s ease-out;
}

.topnav a:hover {
  color: wheat;
  transform: translateY(-3px);
}

.topnav a:active {
  color: wheat;
  transform: translateY(5px);
}

@media (max-width: 28.75em) {
  .topnav {
    justify-content: center;
  }
}

main {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 800px;
  margin: auto;
  line-height: 1.5;
}

@media (max-width: 800px) {
  main {
    width: 80%;
  }
}

.sedans-container {
  color: #f0f0f0;
  background-color: hsl(31, 77%, 52%);
  padding: 40px;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}

.suvs-container {
  color: #f0f0f0;
  background-color: hsl(184, 100%, 22%);
  padding: 40px;
}

.luxury-container {
  color: #f0f0f0;
  background-color: hsl(179, 100%, 13%);
  padding: 40px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}

@media (max-width: 750px) {
  .sedans-container,
  .suvs-container,
  .luxury-container {
    height: 90%;
  }
}

img {
  margin-bottom: 30px;
}

h2 {
  font-family: 'Big Shoulders Display', cursive;
  font-weight: 700;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: 35px;
  color: hsl(0, 0%, 95%);
}

.source {
  margin-right: 5em;
}

p {
  font-family: 'Lexend Deca', sans-serif;
  font-weight: 400;
  font-size: 13px;
  color: hsla(0, 0%, 100%, 0.75);
  margin-bottom: 80px;
}

button {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  border: hsl(0, 0%, 95%) 2px solid;
  border-radius: 50px;
  font-family: 'Lexend Deca', sans-serif;
  background-color: hsl(0, 0%, 95%);
}

.sedans-container button {
  color: hsl(31, 77%, 52%);
}

.suvs-container button {
  color: hsl(184, 100%, 22%);
}

.luxury-container button {
  color: hsl(179, 100%, 13%);
}

button:hover {
  background-color: transparent;
  color: hsl(0, 0%, 95%);
}

